apps/70-tools/radar/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radar
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Tools
    gethomepage.dev/name: Radar
    gethomepage.dev/icon: radar.svg
    gethomepage.dev/description: Technology radar
spec:
  ingressClassName: traefik
  rules:
    - host: radar.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radar
                port:
                  number: 9280
  tls:
    - hosts:
        - radar.dev.truxonline.com
      secretName: radar-tls-dev
